clean up names in schema and regenerate
